Add d3-tree-service to Family Tree section

--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,25 @@
                                 <p class="mt-2 mb-0"><small class="text-muted">Full API collection: <code>bruno-collection/</code></small></p>
                             </div>
                         </div>
+
+                        <!-- Microservices -->
+                        <div class="card mt-3">
+                            <div class="card-header bg-secondary text-white">
+                                <h3 class="mb-0">Microservices</h3>
+                            </div>
+                            <div class="card-body">
+                                <div class="list-group">
+                                    <a href="http://localhost:3300/health" target="_blank" class="list-group-item list-group-item-action">
+                                        <div class="d-flex w-100 justify-content-between">
+                                            <h5 class="mb-1">D3 Tree Service</h5>
+                                            <small class="health-indicator" data-url="http://localhost:3300/health">:3300</small>
+                                        </div>
+                                        <p class="mb-1">Server-side D3 tree rendering with jsdom</p>
+                                        <small class="text-muted">POST /render - accepts tree JSON, returns SVG</small>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Database Statistics -->
